# pixel-py

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SIMPLE_GUIDE.md  docker-build.sh  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  docker-stop.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  task.md
scripts/: crontab.txt  daily_trade.sh  monthly_build.sh  monthly_promote.sh
services/: __init__.py  algo_trading_service.py  deskew_service.py  scheduler_service.py
shared/: __init__.py  config.py  errors.py  models.py
tests/: conftest.py  test_deskew.py  test_main.py  test_shared_config.py  test_shared_errors.py  test_shared_models.py
